<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint" translatable="false">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="currency_label" translatable="false">USD</string>
    <string name="current_price">Current Price</string>
    <string name="widget_title">StockHawk</string>
    <string name="stock_change">Stock change</string>
    <string name="stock_price">Stock price</string>
    <string name="add_stock">Add Stock</string>
    <string name="stock_list">Stock list</string>
    <string name="stock_name">Stock name</string>
    <string name="stock_chart">Stock chart</string>
    <string name="stock_absolute_change">Stock absolute change</string>
    <string name="stock_percentage">Stock percentage change</string>
    <string name="stock_current_price">Stock current price</string>

</resources>
