<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--tools:context="com.udacity.stockhawk.ui.DetailActivity">-->

            <TextView
                android:id="@+id/tv_stock_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginStart="@dimen/margin_extra_large"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toTopOf="@+id/iv_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="YHOO"
                tools:contentDescription="@string/stock_name"/>

            <TextView
                android:id="@+id/tv_current_stock_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_extra_larger"
                app:layout_constraintLeft_toLeftOf="@+id/tv_stock_symbol"
                app:layout_constraintTop_toBottomOf="@+id/iv_divider"
                tools:text="37.68"
                android:layout_marginTop="@dimen/margin_medium"
                tools:contentDescription="@string/stock_current_price"/>

            <ImageView
                android:id="@+id/iv_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_stock_symbol"
                app:layout_constraintBottom_toTopOf="@+id/tv_current_stock_price"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_current_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_price"
                app:layout_constraintLeft_toLeftOf="@+id/tv_current_stock_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_stock_price"
                />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:visibility="gone"
                tools:text="Error message"
                tools:layout_editor_absoluteY="810dp"
                tools:layout_editor_absoluteX="0dp"/>

            <TextView
                android:id="@+id/tv_absolute_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_price_label"
                app:layout_constraintLeft_toLeftOf="@+id/tv_current_price_label"
                tools:text="+0.24"
                tools:contentDescription="@string/stock_absolute_change"/>

            <TextView
                android:id="@+id/tv_percentage_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintLeft_toRightOf="@+id/tv_absolute_change"
                app:layout_constraintBottom_toTopOf="@+id/tv_absolute_change"
                app:layout_constraintTop_toBottomOf="@+id/tv_absolute_change"
                tools:text="(+64%)"
                tools:contentDescription="@string/stock_percentage"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_height="250dp"
                android:layout_width="0dp"
                android:background="@android:color/white"
                app:layout_constraintLeft_toLeftOf="@+id/tv_absolute_change"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_absolute_change"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginRight="@dimen/margin_extra_large"
                tools:contentDescription="@string/stock_chart"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
